20090821
	emu/Nt/^(os.c ie-os.c) add #include <excpt.h>
20090819
	appl/cmd/mk/mk.b replace maketmp/mktemp (issue 202, mechiel); also old change: don't persist with bulkmtime on non-directories
20090816
	registry(4) Event.post increased rootvers when entries are written or removed (issue 179, powerman)
20090809
	bring mkfs(8) up to date (issue 176)
	remove -q options from mkfs and mkext (-q was a transitional option to suppress quoting of file names)
20090806
	increase `backlog' value in all listen calls in hosted Inferno (emu/*/ipif*.c) [powerman]
20090805
	further checking added to libinterp/keyring.c: rejects incorrect states and out of bounds values of f->n
	add lib/emptydirs and mkdirs target to /mkfile (utils/mkdir needs to be changed for Windows use)
20090730
	improve the error checking in strtosk and strtopk to help detect mangled or inappropriate keys
20090728
	emu/port/main.c: put host's working directory name as emuwdir
	document initial environment variables in emu(1)
	appl/lib/bufio.b dis/lib/bufio.dis [issue 199] don't lose track of actual file seek offset (following second suggestion of mjl)
	issue 196: after general apologies for appl/svc/httpd/cache.b (don't look if you don't need it, not one of ours, etc. etc.) will patch as suggested by extrudedaluminiu(!) [vs]
20090719
	correct order of operands to memset(!), eg in ipif [mjl]
20090718
	fix appl/cmd/stream.b error exits to include fail: [mjl]
20090717
	fix appl/lib/ip.b (see issue 186) [mjl]
	re-enable XK_ keys in port/win-x11a.c [mjl]
20090716
	add segflush calls to comp-386.c [probably need different name eventually to avoid time wasting when not needed]
20090630
	add sig (see man(1)) [via p9p and caerwyn]
20090627
	push changes described for arm in 20090330 (but not previously pushed)
	begin change of inferno-os.googlecode.com from svn to mercurial
200090612
	added support for Linux-power (ericvh; and further simplified)
20090605